[package]
name = "toondb-studio"
version = "0.2.4"
description = "ToonDB Studio - Database Administration Tool for ToonDB"
authors = ["ToonDB Team"]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[lib]
name = "toondb_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"

# ToonDB integration
toondb = { version = "0.2.4", path = "../../toondb-client", features = ["embedded"] }
toondb-core = { version = "0.2.4", path = "../../toondb-core" }
toondb-storage = { version = "0.2.4", path = "../../toondb-storage" }
toondb-mcp = { version = "0.2.4", path = "../../toondb-mcp" }

# Async utilities
parking_lot = "0.12"

# LLM integration
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-store = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
